--- a/home_assistant_bridge/setup.cfg
+++ b/home_assistant_bridge/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/home_assistant
+script-dir=$base/lib/home_assistant_bridge
 [install]
-install-scripts=$base/lib/home_assistant
+install-scripts=$base/lib/home_assistant_bridge
