--- a/home_assistant_bridge/package.xml
+++ b/home_assistant_bridge/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>home_assistant</name>
+  <name>home_assistant_bridge</name>
   <version>1.0.0</version>
   <description>System stats.</description>
   <maintainer email="dheera@dheera.net">root</maintainer>
